--- a/theme.toml
+++ b/theme.toml
@@ -1,11 +1,8 @@
-# theme.toml template for a Hugo theme
-# See https://github.com/gohugoio/hugoThemes#themetoml for an example
-
-name = "bzn"
+name = "coffee"
 license = "MIT"
-licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
+licenselink = "https://github.com/dark-coffee/hugo-theme-coffee/blob/master/LICENSE"
 description = ""
-homepage = "http://example.com/"
+homepage = "http://github.com/dark-coffee/"
 tags = []
 features = []
 min_version = "0.41.0"
